# Moses

./: CMakeLists.txt  README.md
include/: types.hpp
include/core/: MWUEngine.hpp
include/ml/: OnnxInference.hpp
include/processors/: GAFGenerator.hpp  SignalNormalizer.hpp
include/risk/: RiskManager.hpp
src/: main.cpp
src/core/: AssetManager.cpp  MWUEngine.cpp
src/ml/: OnnxInference.cpp
src/net/: AsyncServer.cpp
src/processors/: GAFGenerator.cpp  SignalNormalizer.cpp
src/risk/: RiskManager.cpp
train/: fetch_data.py  train_gaf.py  train_ppo.py
